# faiss

./: CMakeLists.txt
c_api/: CMakeLists.txt
cmake/: FindBLAS.cmake  FindLAPACK.cmake
faiss/gpu/: CMakeLists.txt  hipify.sh
faiss/gpu/impl/: IVFBase.cuh  IVFFlat.cu  PQCodeLoad.cuh
faiss/gpu/utils/: DeviceUtils.cu  LoadStoreOperators.cuh  MatrixMult-inl.cuh
faiss/hip/: CMakeLists.txt  GpuAutoTune.cpp  GpuAutoTune.h  GpuCloner.cpp  GpuCloner.h  GpuClonerOptions.h  GpuDistance.h  GpuDistance.hip  GpuFaissAssert.h  GpuIcmEncoder.h  GpuIcmEncoder.hip  GpuIndex.h  GpuIndex.hip  GpuIndexBinaryFlat.h  GpuIndexBinaryFlat.hip  GpuIndexFlat.h  GpuIndexFlat.hip  GpuIndexIVF.h  GpuIndexIVF.hip  GpuIndexIVFFlat.h  GpuIndexIVFFlat.hip  GpuIndexIVFPQ.h  GpuIndexIVFPQ.hip  GpuIndexIVFScalarQuantizer.h  GpuIndexIVFScalarQuantizer.hip  GpuIndicesOptions.h  GpuResources.cpp  GpuResources.h  StandardGpuResources.cpp  StandardGpuResources.h
faiss/hip/impl/: BinaryDistance.h  BinaryDistance.hip  BinaryFlatIndex.h  BinaryFlatIndex.hip  BroadcastSum.h  BroadcastSum.hip  Distance.h  Distance.hip  DistanceUtils.h  FlatIndex.h  FlatIndex.hip  GeneralDistance.h  GpuScalarQuantizer.h  IVFAppend.h  IVFAppend.hip  IVFBase.h  IVFBase.hip  IVFFlat.h  IVFFlat.hip  IVFFlatScan.h  IVFFlatScan.hip  IVFInterleaved.h  IVFInterleaved.hip  IVFPQ.h  IVFPQ.hip  IVFUtils.h  IVFUtils.hip  IVFUtilsSelect1.hip  IVFUtilsSelect2.hip  IcmEncoder.h  IcmEncoder.hip  IndexUtils.h  IndexUtils.hip  InterleavedCodes.cpp  InterleavedCodes.h  L2Norm.h  L2Norm.hip  L2Select.h  L2Select.hip  PQCodeDistances-inl.h  (+13 more)
faiss/hip/impl/scan/: IVFInterleaved1.hip  IVFInterleaved1024.hip  IVFInterleaved128.hip  IVFInterleaved2048.hip  IVFInterleaved256.hip  IVFInterleaved32.hip  IVFInterleaved512.hip  IVFInterleaved64.hip  IVFInterleavedImpl.h  IVFInterleavedScanKernelTemplate.hip
faiss/hip/perf/: IndexWrapper-inl.h  IndexWrapper.h  PerfBinaryFlat.hip  PerfClustering.cpp  PerfFlat.hip  PerfIVFFlat.hip  PerfIVFPQ.hip  PerfIVFPQAdd.cpp  PerfSelect.hip  WriteIndex.cpp
faiss/hip/test/: CMakeLists.txt  TestCodePacking.cpp  TestGpuDistance.hip  TestGpuIndexBinaryFlat.cpp  TestGpuIndexFlat.cpp  TestGpuIndexIVFFlat.cpp  TestGpuIndexIVFPQ.cpp  TestGpuIndexIVFScalarQuantizer.cpp  TestGpuMemoryException.cpp  TestGpuSelect.hip  TestUtils.cpp  TestUtils.h  demo_ivfpq_indexing_gpu.cpp
faiss/hip/utils/: BlockSelectFloat.hip  BlockSelectKernel.h  Comparators.h  ConversionOperators.h  CopyUtils.h  DeviceDefs.h  DeviceTensor-inl.h  DeviceTensor.h  DeviceUtils.h  DeviceUtils.hip  DeviceVector.h  Float16.h  HostTensor-inl.h  HostTensor.h  Limits.h  LoadStoreOperators.h  MathOperators.h  MatrixMult-inl.h  MatrixMult.h  MergeNetworkBlock.h  MergeNetworkUtils.h  MergeNetworkWarp.h  NoTypeTensor.h  Pair.h  PtxUtils.h  ReductionOperators.h  Reductions.h  Select.h  StackDeviceMemory.cpp  StackDeviceMemory.h  StaticUtils.h  Tensor-inl.h  Tensor.h  ThrustUtils.h  Timer.cpp  Timer.h  Transpose.h  WarpPackedBits.h  WarpSelectFloat.hip  WarpSelectKernel.h  (+1 more)
faiss/hip/utils/blockselect/: BlockSelectFloat1.hip  BlockSelectFloat128.hip  BlockSelectFloat256.hip  BlockSelectFloat32.hip  BlockSelectFloat64.hip  BlockSelectFloatF1024.hip  BlockSelectFloatF2048.hip  BlockSelectFloatF512.hip  BlockSelectFloatT1024.hip  BlockSelectFloatT2048.hip  BlockSelectFloatT512.hip  BlockSelectImpl.h
faiss/hip/utils/warpselect/: WarpSelectFloat1.hip  WarpSelectFloat128.hip  WarpSelectFloat256.hip  WarpSelectFloat32.hip  WarpSelectFloat64.hip  WarpSelectFloatF1024.hip  WarpSelectFloatF2048.hip  WarpSelectFloatF512.hip  WarpSelectFloatT1024.hip  WarpSelectFloatT2048.hip  WarpSelectFloatT512.hip  WarpSelectImpl.h
faiss/python/: CMakeLists.txt  swigfaiss.swig
